--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -17,7 +17,9 @@
             >
             <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
 
-            <ng-container *ngComponentOutlet="getWidget(item.widgetRef.id) | async;"></ng-container>
+            <de-widget [config]="item.widgetRef.config"/>
+
+            <!-- <ng-container *ngComponentOutlet="getWidget(item.widgetRef.id) | async;"></ng-container> -->
   
           </de-layout-item>
         }
