--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -45,6 +45,10 @@
 .example-custom-placeholder {
   background: #ccc;
   border: dotted 3px #999;
-  min-height: 60px;
+  min-height: 30rem;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
 }
