--- a/src/app/layout/layout.scss
+++ b/src/app/layout/layout.scss
@@ -1,6 +1,6 @@
 :host {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
   gap: 1rem;
   min-height: 100%;
   padding-bottom: 2rem;
